@@ -1,7 +1,8 @@
 class LeadsController < ApplicationController
   before_filter :handle_web_to_lead_submission, :only => :create
   before_filter :require_user
-  before_filter "set_current_tab(:leads)"
+  before_filter :get_data_for_sidebar, :only => :index
+  before_filter "set_current_tab(:leads)", :except => :filter
 
   # GET /leads
   # GET /leads.xml
@@ -145,12 +146,39 @@ class LeadsController < ApplicationController
     end
   end
 
+  # Ajax request to filter out list of leads.
+  #----------------------------------------------------------------------------
+  def filter
+    checked = params[:status].split(",")
+    Setting.lead_status.keys.each do |key|
+      session["lead_filter_#{key}".to_sym] = (checked.include?(key.to_s) ? true : nil)
+    end
+    session[:lead_filter_other] = (checked.include?("other") ? true : nil)
+
+    @leads = Lead.find(:all, :conditions => ["status IN (?)", checked], :order => "id DESC")
+    # logger.info ">>> @leads.size = " + @leads.size.to_s
+
+    render :update do |page|
+      page[:list].replace_html render(:partial => "filter")
+    end
+  end
+
   private
   #----------------------------------------------------------------------------
   def handle_web_to_lead_submission
     if request.post? && !params[:authorization].blank? && !params[:token].blank?
       @current_user = User.find_by_password_hash_and_password_salt(params[:authorization], params[:token])
     end
+  end
+
+  #----------------------------------------------------------------------------
+  def get_data_for_sidebar
+    @lead_status_total = { :all => Lead.count, :other => 0 }
+    Setting.lead_status.keys.each do |key|
+      @lead_status_total[key] = Lead.count(:conditions => [ "status=?", key.to_s ])
+      @lead_status_total[:other] -= @lead_status_total[key]
+    end
+    @lead_status_total[:other] += @lead_status_total[:all]
   end
 
 end
