@@ -1,0 +1,15 @@
+- Setting.lead_status.invert.sort.each do |key, value|
+  .check_box{:style => "border-bottom: 1px silver dotted;"}
+    %div{:style => "float:right;"}
+      = @lead_status_total[value]
+    = status_checbox(value) << " " << key
+
+.check_box{:style => "border-bottom: 1px silver dotted;"}
+  %div{:style => "float:right;"}
+    = @lead_status_total[:other]
+  = status_checbox("other") << " Other"
+
+.check_box{:style => "border-bottom: 1px silver dotted;"}
+  %div{:style => "float:right;"}
+    %b= @lead_status_total[:all]
+  %b Total Leads
